--- a/login.html
+++ b/login.html
@@ -39,22 +39,60 @@
 			<img src="img/img_login.jpg" height="570px">
 		</div>
 		<div class="login">
-			<form>
+			<form class="form" action="proseslogin.php" method="POST">
+				<center><h1 style="margin-bottom: 40px;">Selamat Datang ! Silahkan Login</h1></center>
 				<div class="form-group">
-					<h1><label for="exampleInputEmail1">Username</label></h1>
-					<input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukan Username">
+					<h1><label for="exampleInputUsername">Username</label></h1>
+					<input type="text" class="form-control" id="exampleInputUsername" aria-describedby="emailHelp" name="username" placeholder="Masukkan Username"/>
 				</div>
 				<div class="form-group">
 					<h1><label for="exampleInputPassword1">Password</label></h1>
-					<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Masukkan Password">
+					<input type="password" class="form-control" id="exampleInputPassword" name="password" placeholder="Masukkan Pasword"/>
 				</div>
 				<div class="form-group form-check">
 					<input type="checkbox" class="form-check-input" id="exampleCheck1">
 					<label class="form-check-label" for="exampleCheck1">Tetap Login</label>
 				</div>
-					<button type="submit" class="btn btn-primary">Login</button>
+				<div class="btn">
+					<button type="submit" class="btn btn-primary">Login</button><br>
+					<button style="margin-top: 5px;" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Daftar</button><br>
+				</div>
 			</form>
 		</div>	
+	</div>
+		<!-- Button trigger modal -->
+	
+
+	<!-- Modal -->
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h5 class="modal-title" id="exampleModalLabel">Daftar</h5>
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	          <span aria-hidden="true">&times;</span>
+	        </button>
+	      </div>
+	      <div class="modal-body">
+	      	<div>
+	      		Pilih Jabatan :
+		      	<select name="jabatan">
+		      		<option value="staff">Staff</option>
+				    <option value="pimpinan">Pimpinan</option>
+				    <option value="distributor">Distributor</option>
+				    <option value="supplier">Supplier</option>
+				</select>
+		      	<div style="margin-top: 10px;"><input type="text" class="form-control" name="nama" placeholder="Masukkan Nama"/></div>
+		        <div style="margin-top: 10px;"><input type="text" class="form-control" name="username" placeholder="Masukkan Username"/></div>
+		        <div style="margin-top: 10px;"><input type="password" class="form-control" name="password" placeholder="Masukkan Password"/></div>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Tutup</button>
+		        <button onclick="window.location='insertuser.php'" method="POST" type="submit" class="btn btn-primary">Mendaftar</button>
+		      </div>
+	      	</div>
+	    </div>
+	  </div>
 	</div>
 </body>
 </html>
